--- a/register.html
+++ b/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark" lang="en" style="font-family: 'Open Sans', sans-serif;">
+<html data-bs-theme="dark" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sign up - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
 </head>
 
-<body style="font-family: 'Open Sans', sans-serif;">
+<body>
     <nav class="navbar navbar-expand-md py-3 navbar-dark" id="mainNav" style="--bs-body-bg: #2b2b2b;--bs-dark-rgb: 43,43,43;--bs-dark: #2b2b2b;background: rgba(255,15,0,0);">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span>Sumeru Library</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" data-bs-theme="light">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
@@ -27,43 +27,32 @@
             </div>
         </div>
     </nav>
-    <header class="bg-dark"></header>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1 style="text-align: center;margin: 16px;"><strong>Knowledge anywhere, anytime, for free.</strong></h1>
+    <section class="py-5">
+        <div class="container py-5">
+            <div class="row mb-4 mb-lg-5">
+                <div class="col-md-8 col-xl-6 text-center mx-auto">
+                    <p class="fw-bold text-success mb-2">Register</p>
+                    <h2 class="fw-bold">Become a patron</h2>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row row-cols-2" style="margin-right: 16px;margin-left: 16px;">
-                <div class="col d-sm-flex align-items-sm-center">
-                    <h2 style="margin-top: 0px;margin-bottom: 0px;">New Releases</h2>
-                </div>
-                <div class="col d-flex d-sm-flex d-xl-flex justify-content-end align-items-center justify-content-sm-end justify-content-xl-end align-items-xl-center"><a class="btn btn-primary btn-sm" role="button">Learn More</a></div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row" style="margin: 17px;">
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6 col-xl-4">
+                    <div class="card" style="background: var(--bs-primary-text-emphasis);">
+                        <div class="card-body text-center d-flex flex-column align-items-center">
+                            <div class="bs-icon-xl bs-icon-circle bs-icon-primary shadow bs-icon my-4"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person">
+                                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"></path>
+                                </svg></div>
+                            <form method="post">
+                                <div style="margin-bottom: 16px;"><input class="form-control" type="number" name="user_id" placeholder="IC Number"></div>
+                                <div style="margin-bottom: 16px;"><input class="form-control" type="text" name="user_name" placeholder="Full Name"></div>
+                                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
+                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
+                                <div style="margin-bottom: 16px;"><input class="form-control" type="number" name="telephone_number" placeholder="Telephone Number"></div>
+                                <div class="mb-3"><button class="btn btn-primary shadow d-block w-100" type="submit">Sign up</button></div>
+                                <p class="text-muted">Already have an account?&nbsp;<a href="login.html">Log in</a></p>
+                                <div class="mb-3"></div>
+                                <div style="margin-bottom: 16px;"></div>
+                            </form>
                         </div>
                     </div>
                 </div>
