--- a/untitled.html
+++ b/untitled.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html data-bs-theme="dark" lang="en" style="font-family: 'Open Sans', sans-serif;">
+<html data-bs-theme="dark" lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>library_management</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-baguetteBox.min.css">
 </head>
 
-<body style="font-family: 'Open Sans', sans-serif;">
+<body>
     <nav class="navbar navbar-expand-md py-3 navbar-dark" id="mainNav" style="--bs-body-bg: #2b2b2b;--bs-dark-rgb: 43,43,43;--bs-dark: #2b2b2b;background: rgba(255,15,0,0);">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><span>Sumeru Library</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" data-bs-theme="light">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
                     <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
@@ -27,49 +27,31 @@
             </div>
         </div>
     </nav>
-    <header class="bg-dark"></header>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1 style="text-align: center;margin: 16px;"><strong>Knowledge anywhere, anytime, for free.</strong></h1>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row row-cols-2" style="margin-right: 16px;margin-left: 16px;">
-                <div class="col d-sm-flex align-items-sm-center">
-                    <h2 style="margin-top: 0px;margin-bottom: 0px;">New Releases</h2>
-                </div>
-                <div class="col d-flex d-sm-flex d-xl-flex justify-content-end align-items-center justify-content-sm-end justify-content-xl-end align-items-xl-center"><a class="btn btn-primary btn-sm" role="button">Learn More</a></div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row" style="margin: 17px;">
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
-                        </div>
+    <div class="container" style="margin-top: 16px;margin-bottom: 16px;">
+        <div class="row">
+            <div class="col-md-4 col-xl-4 offset-xl-0">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                    <div class="card-body">
+                        <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><a class="btn btn-primary" role="button">More Info</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
-                        </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                    <div class="card-body">
+                        <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><a class="btn btn-primary" role="button">More Info</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card" style="background: var(--bs-primary-text-emphasis);"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
-                        <div class="card-body">
-                            <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button" style="margin-top: 8px;">More Info</button>
-                        </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                    <div class="card-body">
+                        <h4 class="card-title" style="font-weight: bold;">Attack on Titan Volume 34</h4><a class="btn btn-primary" role="button">More Info</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <footer>
         <div class="container py-4 py-lg-5">
             <hr>
