--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -22,17 +24,18 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                 </ul><a class="btn btn-primary" role="button" href="login.html" style="--bs-primary: #648d83;--bs-primary-rgb: 100,141,131;border-style: none;background: var(--bs-primary-bg-subtle);">Login / Register</a>
             </div>
         </div>
     </nav>
-    <header class="bg-dark">
-        <div class="container py-5">
+    <section>
+        <div class="container">
             <h1 style="font-weight: bold;text-align: left;">About Us</h1>
-            <p style="font-size: 20px;text-align: justify;margin-top: 24px;margin-bottom: 24px;">Welcome to our Library Management System, a digital haven for book enthusiasts and knowledge seekers. Established with a passion for fostering a love of literature and learning, our platform is designed to streamline the process of accessing and managing a vast collection of books. Committed to the idea that knowledge should be easily accessible to all, our team of dedicated professionals has worked tirelessly to create an intuitive and user-friendly experience. Explore our comprehensive catalog, where you can discover a rich assortment of literary treasures spanning various genres. Whether you're a student, researcher, or an avid reader, we invite you to join us on this journey of exploration and education. Our mission is to make the world of books readily available at your fingertips, promoting a culture of lifelong learning and intellectual curiosity.</p>
+            <hr>
+            <p style="font-size: 20px;text-align: justify;">Welcome to our Library Management System, a digital haven for book enthusiasts and knowledge seekers. Established with a passion for fostering a love of literature and learning, our platform is designed to streamline the process of accessing and managing a vast collection of books. Committed to the idea that knowledge should be easily accessible to all, our team of dedicated professionals has worked tirelessly to create an intuitive and user-friendly experience. Explore our comprehensive catalog, where you can discover a rich assortment of literary treasures spanning various genres. Whether you're a student, researcher, or an avid reader, we invite you to join us on this journey of exploration and education. Our mission is to make the world of books readily available at your fingertips, promoting a culture of lifelong learning and intellectual curiosity.</p>
         </div>
-    </header>
+    </section>
     <footer>
         <div class="container py-4 py-lg-5">
             <hr>
