--- a/books_fiction.html
+++ b/books_fiction.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Products - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -22,22 +24,36 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                 </ul><a class="btn btn-primary" role="button" href="login.html" style="--bs-primary: #648d83;--bs-primary-rgb: 100,141,131;border-style: none;background: var(--bs-primary-bg-subtle);">Login / Register</a>
             </div>
         </div>
     </nav>
-    <section class="py-5">
-        <section class="photo-gallery py-4 py-xl-5">
-            <div class="container">
-                <div class="row mb-5" style="color: var(--bs-primary-bg-subtle);">
-                    <div class="col-md-8 col-xl-6 text-center mx-auto" style="width: 609px;padding: 0px;">
-                        <h2 style="font-weight: bold;text-align: left;">Fiction Books</h2>
-                        <hr>
-                        <p class="w-lg-50" style="font-style: italic;text-align: left;">Fiction is any creative work, chiefly any narrative work, portraying individuals, events, or places that are imaginary or in ways that are imaginary. Fictional portrayals are thus inconsistent with history, fact, or plausibility.</p>
+    <section>
+        <div class="container">
+            <h1 style="font-weight: bold;text-align: left;">Fiction Books</h1>
+            <hr>
+            <p style="font-size: 20px;text-align: justify;"><em><span style="color: rgb(224, 232, 230);">Fiction is any creative work, chiefly any narrative work, portraying individuals, events, or places that are imaginary or in ways that are imaginary. Fictional portrayals are thus inconsistent with history, fact, or plausibility.</span></em></p>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <hr>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col d-xl-flex align-items-xl-center">
+                            <h5 class="d-xl-flex justify-content-xl-start align-items-xl-center" style="margin-bottom: 0px;">Search Book Titles:</h5>
+                        </div>
+                        <div class="col d-md-flex align-items-md-center"><input type="search"></div>
                     </div>
                 </div>
             </div>
+            <hr>
+        </div>
+    </section>
+    <section class="py-5">
+        <section class="photo-gallery py-4 py-xl-5">
             <div class="container" style="margin-top: 16px;margin-bottom: 16px;">
                 <div class="row" style="margin-top: 16px;margin-bottom: 16px;">
                     <div class="col-md-4 col-xl-4 offset-xl-0">
