--- a/books_nonfiction.html
+++ b/books_nonfiction.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Products - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -22,36 +24,16 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                 </ul><a class="btn btn-primary" role="button" href="login.html" style="--bs-primary: #648d83;--bs-primary-rgb: 100,141,131;border-style: none;background: var(--bs-primary-bg-subtle);">Login / Register</a>
             </div>
         </div>
     </nav>
-    <section class="py-5">
-        <div class="container py-5" style="text-align: center;">
-            <section class="photo-gallery py-4 py-xl-5">
-                <div class="container">
-                    <div class="row justify-content-xl-end align-items-xl-start mb-5">
-                        <div class="col-md-8 col-xl-6 text-center mx-auto" style="width: 609px;">
-                            <h2 style="font-weight: bold;text-align: left;">Non-Fiction Books</h2>
-                            <p class="w-lg-50" style="text-align: left;">Non-fiction is any document or media content that attempts, in good faith, to convey information only about the real world, rather than being grounded in imagination. Non-fiction typically aims to present topics objectively based on historical, scientific, and empirical information.</p>
-                        </div>
-                    </div><input class="form-control-sm" type="search" style="margin: 16px;" placeholder="Search Non-Fiction Books">
-                    <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                        <div class="col item" style="text-align: left;"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="assets/img/clipboard-image.png" style="width: 136.656px;">
-                                <h1>Heading</h1>
-                            </a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                        <div class="col item"><a href="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"><img class="img-fluid" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></a></div>
-                    </div>
-                </div>
-            </section>
+    <section>
+        <div class="container">
+            <h1 style="font-weight: bold;text-align: left;">Non-Fiction Books</h1>
+            <hr>
+            <p style="font-size: 20px;text-align: justify;"><em>Non-fiction is any document or media content that attempts, in good faith, to convey information only about the real world, rather than being grounded in imagination. Non-fiction typically aims to present topics objectively based on historical, scientific, and empirical information.</em></p><input class="form-control-sm" type="search" style="margin: 16px;" placeholder="Search Non-Fiction Books">
         </div>
     </section>
     <footer>
