--- a/catalogue.html
+++ b/catalogue.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Services - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -22,14 +24,105 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link active" href="catalogue.html">Catalogue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                 </ul><a class="btn btn-primary" role="button" href="login.html" style="--bs-primary: #648d83;--bs-primary-rgb: 100,141,131;border-style: none;background: var(--bs-primary-bg-subtle);">Login / Register</a>
             </div>
         </div>
     </nav>
-    <section class="text-center py-5">
-        <div class="container" style="text-align: center;margin: 16px;"><a class="btn btn-primary btn-lg" role="button" href="books_fiction.html">Fiction</a></div>
-        <div class="container" style="margin: 16px;"><a class="btn btn-primary btn-lg" role="button" href="books_nonfiction.html">Non-fiction</a></div>
+    <section>
+        <div class="col" style="margin-top: 16px;margin-left: 40px;">
+            <h1><strong>Catalogue</strong></h1>
+        </div>
+    </section>
+    <section class="text-center py-5" style="margin-left: 40px;margin-right: 40px;">
+        <div class="container">
+            <div class="col">
+                <div class="row" style="margin-bottom: 8px;margin-top: 8px;">
+                    <div class="col d-flex d-sm-flex justify-content-start align-items-center align-items-sm-center justify-content-xl-start align-items-xl-center" style="padding-left: 0px;padding-right: 0px;">
+                        <h2 style="margin-bottom: 0px;"><strong>Fiction</strong></h2>
+                    </div>
+                    <div class="col d-md-flex justify-content-md-end align-items-md-center justify-content-xl-end align-items-xl-center" style="padding-right: 0px;padding-left: 0px;"><a class="btn btn-primary btn-sm d-flex justify-content-end align-items-center" role="button" href="books_fiction.html">More Fiction Books &gt;&gt;</a></div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="text-center py-5" style="margin-left: 40px;margin-right: 40px;">
+        <div class="container">
+            <div class="col">
+                <div class="row" style="margin-bottom: 8px;margin-top: 8px;">
+                    <div class="col d-flex d-sm-flex justify-content-start align-items-center align-items-sm-center justify-content-xl-start align-items-xl-center" style="padding-left: 0px;padding-right: 0px;">
+                        <h2 style="margin-bottom: 0px;"><strong>Non-Fiction</strong></h2>
+                    </div>
+                    <div class="col d-md-flex justify-content-md-end align-items-md-center justify-content-xl-end align-items-xl-center" style="padding-right: 0px;padding-left: 0px;"><a class="btn btn-primary btn-sm d-flex justify-content-end align-items-center" role="button" href="books_nonfiction.html">More Non-Fiction Books &gt;&gt;</a></div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="margin-bottom: 12px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/clipboard-image.png">
+                        <div class="card-body">
+                            <h4 class="card-title">Attack on Titan Volume 34</h4><button class="btn btn-primary btn-sm" type="button">Button</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="container py-4 py-lg-5">
