--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Log in - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
+    <link rel="icon" type="image/jpeg" sizes="500x500" href="assets/img/avatars-n5i5fGsE0yHNsicy-lwYQfg-t500x500.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&amp;display=swap">
@@ -22,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="catalogue.html">Catalogue</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                 </ul><a class="btn btn-primary" role="button" href="login.html" style="--bs-primary: #648d83;--bs-primary-rgb: 100,141,131;border-style: none;background: var(--bs-primary-bg-subtle);">Login / Register</a>
             </div>
         </div>
